--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,14 +1,14 @@
 /* src/assets/styles/global.css */
 body {
+    font-family: "SUSE", sans-serif;
     margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #f8f5f5;
   }
   
   header {
     background: #333;
     color: #fff;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 nav ul {
@@ -19,41 +19,144 @@ nav ul {
 
 nav ul li {
     margin: 0 15px;
+    padding: 5px;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-family: "SUSE", sans-serif;
+    font-size: 1.0rem;
+}
+
+nav li:hover{
+  /* background-color: blue; */
+  border-radius: 5px;
+  color: #242323;
+  cursor: pointer;
+  font-size: 1rem;
+  box-shadow: 0 4px 8px #0e0d0dc5;
+  transition: background-color 0.3s ease;
+
 }
 .hero {
     background: url('../images/bg.jpg') no-repeat center center/cover;
     height: 100vh;
-    color: #fff;
-    padding: 150px;
-    display: block;
-    justify-content: left;
-    align-items: left;
-    text-align: left;
+    padding: 10px;
+    margin-top: -10px;
+   
 }
 
-.hero h1 {
+/* .hero h1 {
     font-size: 3rem;
-}
-
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif; 
+    font-size: 2.5rem; 
+    font-weight: bold; 
+    letter-spacing: 5px; 
+    color: #fff; 
+    text-transform: uppercase; 
+    border: 2px solid red;
+    margin-top: 150px; /* Adiciona espaço superior se necessário
+  } 
 .hero p {
     font-size: 1.5rem;
     margin-bottom: 20px;
-}
+}*/
+ 
+ /* Inicio Agendador  */
+  
+     .scheduler-calendar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 10px;
+        max-width: 600px;
+        background-color: #f7f7f7;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+      
+      h2 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 2rem;
+        margin-bottom: 20px;
+      }
+      
+      .react-calendar {
+        border: none;
+        width: 100%;
+        font-family: 'Poppins', sans-serif;
+        margin-bottom: 5px;
+      }
+      
+      .time-selector {
+        margin-top: 20px;
+        text-align: center;
+        width: 100%;
+      }
+      
+      h3 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1rem;
+        margin-bottom: 5px;
+      }
+      
+      .time-options {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        list-style-type: none;
+        padding: 5px;
+      }
+      
+      .time-option {
+        background-color: #eee;
+        margin: 5px;
+        padding: 10px 15px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-family: 'Poppins', sans-serif;
+        font-size: 1rem;
+        transition: background-color 0.3s;
+      }
+      
+      .time-option:hover {
+        background-color: #ddd;
+      }
+      
+      .time-option.selected {
+        background-color: #0e0d0dc5;
+        color: #fff;
+      }
+      
+      .confirm-button {
+        background-color: #000;
+        border-radius: 5px;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.3s ease;
+        margin-top: 5px;
+      }
+      
+      .confirm-button:hover {
+        background-color: #0e0d0dc5;
+      }
+      
+      .confirmation-message {
+        margin-top: 20px;
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.2rem;
+        color: green;
+        text-align: center;
+      }
+      
+/* Fim Agendador   */
 
-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    background-color: #f00;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-}
 
 .features {
     padding: 50px 0;
