--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -11,48 +11,62 @@ body {
     padding: 10px 0;
 }
 
-nav ul {
+header ul {
     list-style: none;
     display: flex;
     justify-content: end;
 }
 
-nav ul li {
+header ul li {
     margin: 0 15px;
 }
 
-nav ul li a {
+header ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 1.2rem;
 }
-.hero {
-    background: url('../images/bg.jpg') no-repeat center center/cover;
-    height: 100vh;
+header a:hover{
+    color: darkgoldenrod;
+}
+header img{
+    width: 4em;
+    position: absolute;
+    padding: 0 0 0 3em;
+
+}
+
+nav img{
+    width: 100%;
+    
+}
+nav h3,h1{
+    position: absolute;
+    padding: 4em 0 0 5em;
+    font-family: "Gowun Batang", serif;
+    font-weight: 700;
+    font-style: italic;
     color: #fff;
-    padding: 150px;
-    display: block;
-    justify-content: left;
-    align-items: left;
-    text-align: left;
-}
+    
+    
 
-.hero h1 {
-    font-size: 3rem;
 }
-
-.hero p {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    background-color: #f00;
+nav button{
+    
+    position: absolute;
+    font-family: "Gowun Batang", serif;
+    font-weight: 700;
+    font-style: normal;
+    border-radius: 4px;
+    background-color: rgb(0, 0, 0);
     color: #fff;
     border: none;
     cursor: pointer;
+    width: 10em;
+    height: 2em;
+    margin-top: 4em;
+    
+    
 }
 
 .features {
@@ -81,19 +95,3 @@ footer {
     color: #fff;
 }
 
-ion-icon {
-    font-size: 34px;
-    padding: 10px;
-    color: #fff;
-   
-  }
-
-ion-icon a:hover{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px;
-    transition: background 0.2s;
-    border-radius: 50%;
-    
-  }
