--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -25,20 +25,9 @@ header ul li {
 header ul li a {
     color: #fff;
     text-decoration: none;
-    font-family: "SUSE", sans-serif;
     font-size: 1.0rem;
 }
 
-nav li:hover{
-  /* background-color: blue; */
-  border-radius: 5px;
-  color: #242323;
-  cursor: pointer;
-  font-size: 1rem;
-  box-shadow: 0 4px 8px #0e0d0dc5;
-  transition: background-color 0.3s ease;
-
-}
 header a:hover{
     color: darkgoldenrod;
 }
@@ -46,40 +35,58 @@ header img{
     width: 4em;
     position: absolute;
     padding: 0 0 0 3em;
-
 }
-
 nav img{
-    width: 100%;
-    
+    width: 100%;  
 }
-nav h3,h1{
-    position: absolute;
-    padding: 4em 0 0 5em;
+
+nav li:hover{
+    border-radius: 5px;
+    color: #242323;
+    cursor: pointer;
+    font-size: 1rem;
+    box-shadow: 0 4px 8px #0e0d0dc5;
+    transition: background-color 0.3s ease;
+  
+  }
+nav h1{
     font-family: "Gowun Batang", serif;
-    font-weight: 700;
-    font-style: italic;
-    color: #fff;
-    
+    font-size: 60px;
+    position: absolute;
+    margin-top: 0.4em;
+    margin-left: 150px;
+    color: #f4f4f4;
+    text-transform: uppercase;
     
 
 }
-nav button{
-    
-    position: absolute;
+
+nav h3{
     font-family: "Gowun Batang", serif;
-    font-weight: 700;
-    font-style: normal;
-    border-radius: 4px;
-    background-color: rgb(0, 0, 0);
-    color: #fff;
+    font-size: 24px;
+    margin: 10px 0;
+    position: absolute;
+    margin-top: 4em;
+    margin-left: 150px;
+    color: #f4f4f4;
+    
+}
+
+nav button{
+
+    padding: 10px 30px;
+    font-size: 16px;
+    background-color: #383636;
+    color: white;
     border: none;
     cursor: pointer;
-    width: 10em;
-    height: 2em;
-    margin-top: 4em;
-    
-    
+    border-radius: 5px;
+    position: absolute;
+    margin-top: 9em;
+    margin-left: 150px;
+}
+nav button:hover{
+    color: darkgoldenrod;
 }
 
 .features {
