--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -6,9 +6,9 @@ body {
   }
   
   header {
-    background: #333;
+    background: #141414;
     color: #fff;
-    padding: 5px 0;
+    padding: 1px;
 }
 
 header ul {
